Fixed the text alignment for my banner wrap div, linked my different portfolio sections to the nav-bar to activate the skip-to content feature, made the nav sticky and adjusted the opacity as necessary. Also worked on the footer.

--- a/cover.css
+++ b/cover.css
@@ -75,3 +75,8 @@ body {
   height: 153.41px;
   width: 285,656px;
 }
+
+ header {
+  background: black;
+  opacity: 40%;
+ }
